--- a/public/components/fragment/_fragment.scss
+++ b/public/components/fragment/_fragment.scss
@@ -59,12 +59,15 @@
         .fragment__title {
             padding: 0 0 30px;
         }
+        .fragment__subtitle {
+            color: $colorBackground5;
+        }
         .fragment__item {
             padding: 30px 0 30px;
             border-top: 2px dotted $colorBackground10;
             .fragment__title {
                 padding: 0 0 15px;
-                color: $colorBackground4;
+                color: $colorBackground5;
             }
             @include respond-to($desktop) {
                 padding: 30px 40px 30px;
