--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -55,6 +55,7 @@ p {
     position: absolute;
     width: 100%;
     height: 500px;
+    background-color: $colorBackground9;
     background-image: url('/images/hero.jpg');
     background-repeat: repeat-y;
     background-attachment: fixed;
@@ -63,7 +64,6 @@ p {
     @include respond-to($content-width) {
         height: 400px;
         background-repeat: no-repeat;
-        opacity: 0.3;
     }
 }
 .btn {
