--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -17,8 +17,8 @@ $colorBackground10: #056BD0;
 $colorText1: #fff;
 $colorText2: #000;
 $colorText3: #333;
-$error-outline: red;
-$error-text: pink;
+$error-outline: #f00;
+$error-text: #ffb6c1;
 
 /* ----- Responsive ----- */
 
